# memory_santi

./: CMakeLists.txt  Makefile  README.md  dangling_pointer_test.c  heap_ovf_test.c  stack_ovf_test.c  use_after_return.c
